# sepiol

./: .gitignore  README.md  pyproject.toml
sepiol/: env.sh  sepiol.py
